--- a/index.html
+++ b/index.html
@@ -1,22 +1,4 @@
-const nodemailer = require('nodemailer');
-require("dotenv").config()
-module.exports = {
-
-    mailService: (data) => {
-
-        let mailTransporter = nodemailer.createTransport({
-            service: 'gmail',
-            auth: {
-                user: process.env.EMAIL_USER,
-                pass: process.env.EMAIL_PASSWORD
-            }
-        });
-
-        let mailDetails = {
-            from: process.env.EMAIL_USER,
-            to: data.to,
-            subject: data.subject,
-            html: `<!DOCTYPE html>
+<!DOCTYPE html>
             <html lang="en">
               <head>
                 <meta charset="UTF-8" />
@@ -140,27 +122,32 @@ module.exports = {
                               <a
                                 style="display: inline-block; text-transform: initial; color: #2c73ff"
                                 target="_blank"
-                                href="mailto:animalll134@gmail.com?subject = Feedback&body = Message"
+                                href="mailto:makaan3621@gmail.com?subject = Feedback&body = Message"
                               >
-                                animalll134@gmail.com.
+                                makaan3621@gmail.com.
                               </a>
                             </p>
                           </td>
                         </tr>
+                        <!-- <tr>
+                        <td style="padding: 0 30px 30px 30px; text-align: center" align="center">
+                        <a style="padding: 5px; display: inline-block" target="_blank" href="https://youtube.com/@jetalsavani1145">
+                          <img src="https://writertools-assets.s3.ap-south-1.amazonaws.com/writertools-ai-16761082674421676108267442.png"
+                        /></a>
+                        <a style="padding: 5px; display: inline-block" target="_blank" href="https://instagram.com/animalll.in?igshid=YmMyMTA2M2Y=">
+                          <img src="https://writertools-assets.s3.ap-south-1.amazonaws.com/writertools-ai-16761070698891676107069889.png"
+                        /></a>
+                        <a style="padding: 5px; display: inline-block" target="_blank" href="https://www.facebook.com/profile.php?id=100090367631523&mibextid=ZbWKwL">
+                          <img src="https://writertools-assets.s3.ap-south-1.amazonaws.com/writertools-ai-16761070698901676107069890.png"
+                        /></a>
+                        <a style="padding: 5px; display: inline-block" target="_blank" href="https://twitter.com/moodswinger5?t=M0YkE6zLlenXRXBCGVIWeA&s=09">
+                          <img src="https://writertools-assets.s3.ap-south-1.amazonaws.com/writertools-ai-16761082978051676108297805.png"
+                        /></a>
+                      </td>
+                        </tr> -->
                       </table>
                     </td>
                   </tr>
                 </table>
               </body>
-            </html>`
-        };
-
-        mailTransporter.sendMail(mailDetails, function (err, data) {
-            if (err) {
-                console.log('Error Occurs', err.message);
-            } else {
-                console.log('Email sent successfully');
-            }
-        })
-    }
-}
+            </html>
